--- a/index.html
+++ b/index.html
@@ -45,26 +45,14 @@
                 <h2>Projects</h2>
                 <ol>
                     <li class="list">
-                        <h3>User Log in Authentication:</h3>
-                        Developed a secure user authentication system using Java Servlets, JSP pages, and Java filters.
-                        The system includes a login form, password encryption for enhanced security, session management,
-                        and role-based access control. This implementation prioritizes data security and offers a
-                        user-friendly experience, adhering to industry best practices in web development. <a
-                            href="https://chinanagaraju.github.io/Servlet-JSP-project/">User Log in Authentication</a>
-                    </li>
-                    <li class="list">
-                        <h3> Spring Application using RestApi: </h3>
-                        Created a Spring Boot project leveraging Java, Spring Boot MVC, JPA, and REST API to manage
-                        data. This application seamlessly interacts with a database, enabling CRUD (Create, Read,
-                        Update, Delete) operations. It combines robust data storage with efficient RESTful endpoints,
-                        providing a scalable and user-friendly solution.<a href="">Spring Application using RestApi</a>
-                    </li>
-                    <li class="list">
-                        <h3>Startup UI page design:</h3>
-                        Designed a sleek UI page for startup companies using HTML5 and CSS3. The interface features
-                        modern aesthetics, responsiveness, and user-friendly navigation to support the unique needs of
-                        emerging businesses. <a href="https://chinanagaraju.github.io/UI-Page-Design/">User Log in
-                            Authentication</a>
+                        <h2>Resource Tracking System</h2>
+                        This Application is used to Access the location of your vehicles, sales executives, ambulance
+                        services
+                        at all times through this application. We can track our resources WITHOUT using GPS device. We
+                        can
+                        send real time notification through this application. We can track single user or multiple
+                        users.
+
                     </li>
             </div>
         </div>
@@ -89,12 +77,16 @@
             <h3>Links</h3>
             <div><a href="https://github.com/chinanagaraju" alt="git">GitHub</a></div>
             <div><a href="chinanagaraju78@gmail.com" alt="git">Email</a></div>
-            <div><a href="https://www.linkedin.com/in/mallaparapu-chinanagaraju-450395207/" alt="git">LinkedIn.com</a></div>
-            <h3>CodeLinks</h3>
-            <div><a href="https://github.com/chinanagaraju/Servlet-JSP-project" alt="git">User Log in Authentication:</a></div>
-            <div><a href="https://github.com/chinanagaraju/Spring-boot-project" alt="git">Spring Application using RestApi:</a></div>
+            <div><a href="https://www.linkedin.com/in/mallaparapu-chinanagaraju-450395207/" alt="git">LinkedIn.com</a>
+            </div>
+            <!-- <h3>CodeLinks</h3>
+            <div><a href="https://github.com/chinanagaraju/Servlet-JSP-project" alt="git">User Log in
+                    Authentication:</a></div>
+            <div><a href="https://github.com/chinanagaraju/Spring-boot-project" alt="git">Spring Application using
+                    RestApi:</a></div>
             <div><a href="https://github.com/chinanagaraju/UI-Page-Design" alt="git">Startup UI page design:</a></div>
-        </div>
+            -->
+        </div> 
     </div>
     <footer>
         <h2>Contact Details</h2>
